firmware-nonfree (1:20161130-3+rpt3utopia1) experimental; urgency=low

  * Utopia repository import.
  * Bump to linux-support 4.9.0-6
  * Disable everything except firmware-brcm80211
  * Limit build to armhf arm64; avoid overriding the Debian firmware packages
    on other architectures.
  * Build as native (no obvious tarballs available?)

 -- James Lu <james@overdrivenetworks.com>  Mon, 02 Jul 2018 14:35:24 -0700

firmware-nonfree (1:20161130-3+rpt3) stretch; urgency=medium

  * Add brcmfmac43455-sdio version 7.45.154
  * Update brcmfmac43430-sdio to 7.45.98.38
  * Add version numbers

 -- Serge Schneider <serge@raspberrypi.org>  Mon, 12 Mar 2018 11:08:27 +0000

firmware-nonfree (1:20161130-3+rpt2) stretch; urgency=medium

  * Revert brcmfmac43430-sdio.bin to previous version

 -- Serge Schneider <serge@raspberrypi.org>  Wed, 28 Feb 2018 13:53:07 +0000

firmware-nonfree (1:20161130-3+rpt1) stretch; urgency=medium

  * Update brcmfmac43430-sdio.bin
    - See https://www.raspberrypi.org/forums/viewtopic.php?f=63&t=203508

 -- Serge Schneider <serge@raspberrypi.org>  Wed, 07 Feb 2018 11:46:05 +0000

firmware-nonfree (1:20161130-3+rpi2) stretch; urgency=medium

  * Bump epoch to prevent being replaced by raspbian.org
  * Update brcmfmac43430-sdio.txt and brcmfmac43430-sdio.bin
    - CVE-2017-9417: "Broadpwn" issue fix
    - Add "CY" string in the version string
    - AMPDU sequence number deadlock fix (potential fix for this issue)
    - CLM version upgrade
    - CVE-2017-0572: memory corruption fix

 -- Serge Schneider <serge@raspberrypi.org>  Wed, 09 Aug 2017 12:10:08 +0100

firmware-nonfree (20161130-3+rpi1) stretch; urgency=medium

  * Non-maintainer upload.
  * Add brcmfmac43430-sdio.txt
  * Update to linux-support 4.9.0-3
  * debian/bin/gencontrol.py: force UTF8 on copyright files

 -- Serge Schneider <serge@raspberrypi.org>  Mon, 12 Jun 2017 15:40:15 +0000

firmware-nonfree (20161130-3) unstable; urgency=medium
